--- a/Projeto Bio Instagram/css/style.css
+++ b/Projeto Bio Instagram/css/style.css
@@ -30,6 +30,7 @@ body {
   /* Abixo agrupei 4 informações em uma única linha */
 
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -38,7 +39,8 @@ body * {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0px 24px;
 }
@@ -86,6 +88,8 @@ body * {
   transform: translateY(-50%);
 
   z-index: 1;
+
+  animation: slide-out 0.4s;
 }
 
 #switch span {
@@ -99,9 +103,12 @@ body * {
   border-radius: 9999px;
 }
 
-.light #switch button{
-  left: 0;
-  right: initial;
+.light #switch button {
+  animation: slide-in 0.4s forwards;
+}
+
+#switch button:hover{
+  outline: 8px solid var(--highlight-color);
 }
 
 /* Links */
@@ -167,4 +174,34 @@ footer {
   padding: 24px 0px;
   text-align: center;
   font-size: 14px;
+}
+
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(../assets/bg-telas-maiores.svg);
+  }
+
+  .light {
+    --bg-url: url(../assets/bg-telas-maiores-light.svg);
+  }
+}
+
+@keyframes slide-in {
+  from {
+    left: 50%;
+  }
+
+  to {
+    left: 0;
+  }
+}
+
+@keyframes slide-out {
+  from {
+    left: 0;
+  }
+
+  to {
+    left: 50%;
+  }
 }
